pkg/crate/libzt/src/include/ZeroTierSockets.h

//----------------------------------------------------------------------------//
// Error codes                                                                //
//----------------------------------------------------------------------------//

/** Common error return values */
typedef enum {
    /** No error */
    ZTS_ERR_OK = 0,
    /** Socket error, see `zts_errno` */
    ZTS_ERR_SOCKET = -1,
    /** This operation is not allowed at this time. Or possibly the node hasn't been started */
    ZTS_ERR_SERVICE = -2,
    /** Invalid argument */
    ZTS_ERR_ARG = -3,
    /** No result (not necessarily an error) */
    ZTS_ERR_NO_RESULT = -4,
    /** Consider filing a bug report */
    ZTS_ERR_GENERAL = -5
} zts_error_t;
//----------------------------------------------------------------------------//
// Misc definitions                                                           //
//----------------------------------------------------------------------------//

/**
 * Length of human-readable MAC address string
 */
#define ZTS_MAC_ADDRSTRLEN 18
/**
 * Maximum (and required) length of string buffers used to receive
 * string-format IP addresses from the API. This is set to `ZTS_INET6_ADDRSTRLEN`
 * to handle all cases: `ZTS_AF_INET` and `ZTS_AF_INET6`
 */
#define ZTS_IP_MAX_STR_LEN ZTS_INET6_ADDRSTRLEN
#define ZTS_AF_INET   0x0002
#define ZTS_AF_INET6  0x000a
typedef uint8_t zts_sa_family_t;
/**
 * Address structure large enough to hold IPv4 and IPv6 addresses
 */
struct zts_sockaddr_storage {
    uint8_t s2_len;
    zts_sa_family_t ss_family;
    char s2_data1[2];
    uint32_t s2_data2[3];
    uint32_t s2_data3[3];
};
/**
 * @brief Instruct ZeroTier to look for node identity files at the given location. This is an
 * initialization function that can only be called before `zts_node_start()`.
 *
 * Note that calling this function is not mandatory and if it is not called the node's keys will be
 * kept in memory and retrievable via `zts_node_get_id_pair()`.
 *
 * See also: `zts_init_from_memory()`
 *
 * @param port Path Null-terminated file-system path string
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_from_storage(const char* path);
/**
 * @brief Enable or disable whether the node will cache network details
 * (enabled by default when `zts_init_from_storage()` is used.) Must be called before
 * `zts_node_start()`.
 *
 * This can potentially shorten (startup) times between node restarts. This allows the service to
 * nearly instantly inform the network stack of an address to use for this peer
 * so that it can create a transport service. This can be disabled for cases where one
 * may not want network config details to be written to storage. This is
 * especially useful for situations where address assignments do not change
 * often.
 *
 * See also: `zts_init_allow_peer_cache()`
 *
 * @param enabled Whether or not this feature is enabled
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_allow_net_cache(unsigned int allowed);
/**
 * @brief Enable or disable whether the node will cache peer details (enabled
 * by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`.
 *
 * This can potentially shorten (connection) times between node restarts. This allows the service to
 * re-use previously discovered paths to a peer, this prevents the service from
 * having to go through the entire transport-triggered link provisioning
 * process. This is especially useful for situations where paths to peers do not
 * change often. This is enabled by default and can be disabled for cases where
 * one may not want peer details to be written to storage.
 *
 * See also: `zts_init_allow_net_cache()`
 *
 * @param enabled Whether or not this feature is enabled
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_allow_peer_cache(unsigned int allowed);
/**
 * @brief Enable or disable whether the node will cache root definitions (enabled
 * by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`.
 *
 * @param enabled Whether or not this feature is enabled
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_allow_roots_cache(unsigned int allowed);
/**
 * @brief Enable or disable whether the node will cache identities (enabled
 * by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`.
 *
 * @param enabled Whether or not this feature is enabled
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_allow_id_cache(unsigned int allowed);
/**
 * @brief Return whether an address of the given family has been assigned by the network
 *
 * @param net_id Network ID
 * @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`
 * @return `1` if true, `0` if false.
 */
ZTS_API int ZTCALL zts_addr_is_assigned(uint64_t net_id, unsigned int family);
/**
 * @brief Get the first-assigned IP on the given network.
 *
 * To get *all* assigned addresses on a given network, use `zts_addr_get_all()`.
 *
 * @param net_id Network ID
 * @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`
 * @param addr Destination buffer to hold address
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_addr_get(uint64_t net_id, unsigned int family, struct zts_sockaddr_storage* addr);
/**
 * @brief Get the first-assigned IP on the given network as a null-terminated human-readable string
 *
 * To get *all* assigned addresses on a given network, use `zts_addr_get_all()`.
 *
 * @param net_id Network ID
 * @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`
 * @param dst Destination buffer
 * @param len Length of destination buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_addr_get_str(uint64_t net_id, unsigned int family, char* dst, unsigned int len);
/**
 * @brief Get all IP addresses assigned to this node by the given network
 *
 * @param net_id Network ID
 * @param addr Destination buffer to hold address
 * @param count Number of addresses returned
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_addr_get_all(uint64_t net_id, struct zts_sockaddr_storage* addr, unsigned int* count);
/**
 * @brief Compute a `6PLANE` IPv6 address for the given Network ID and Node ID
 *
 * @param net_id Network ID
 * @param node_id Node ID
 * @param addr Destination structure for address
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL
zts_addr_compute_6plane(const uint64_t net_id, const uint64_t node_id, struct zts_sockaddr_storage* addr);
/**
 * @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID
 *
 * @param net_id Network ID
 * @param node_id Node ID
 * @param addr Destination structure for address
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL
zts_addr_compute_rfc4193(const uint64_t net_id, const uint64_t node_id, struct zts_sockaddr_storage* addr);
/**
 * @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID and copy its
 * null-terminated human-readable string representation into destination buffer.
 *
 * @param net_id Network ID
 * @param node_id Node ID
 * @param dst Destination string buffer
 * @param len Length of destination string buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_addr_compute_rfc4193_str(uint64_t net_id, uint64_t node_id, char* dst, unsigned int len);
/**
 * @brief Compute `6PLANE` IPv6 address for the given Network ID and Node ID and copy its
 * null-terminated human-readable string representation into destination buffer.
 *
 * @param net_id Network ID
 * @param node_id Node ID
 * @param dst Destination string buffer
 * @param len Length of destination string buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_addr_compute_6plane_str(uint64_t net_id, uint64_t node_id, char* dst, unsigned int len);
/**
 * @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID
 *
 * Ad-hoc Network:
 * ```text
 * ffSSSSEEEE000000
 * | |   |   |
 * | |   |   Reserved for future use, must be 0
 * | |   End of port range (hex)
 * | Start of port range (hex)
 * Reserved ZeroTier address prefix indicating a controller-less network.
 * ```
 * Ad-hoc networks are public (no access control) networks that have no network
 * controller. Instead their configuration and other credentials are generated
 * locally. Ad-hoc networks permit only IPv6 UDP and TCP unicast traffic
 * (no multicast or broadcast) using 6plane format NDP-emulated IPv6 addresses.
 * In addition an ad-hoc network ID encodes an IP port range. UDP packets and
 * TCP SYN (connection open) packets are only allowed to destination ports
 * within the encoded range.
 *
 * For example `ff00160016000000` is an ad-hoc network allowing only SSH,
 * while `ff0000ffff000000` is an ad-hoc network allowing any UDP or TCP port.
 *
 * Keep in mind that these networks are public and anyone in the entire world
 * can join them. Care must be taken to avoid exposing vulnerable services or
 * sharing unwanted files or other resources.
 *
 *
 * @param start_port Start of port allowed port range
 * @param end_port End of allowed port range
 * @return An Ad-hoc network ID
 */
ZTS_API uint64_t ZTCALL zts_net_compute_adhoc_id(uint16_t start_port, uint16_t end_port);
/**
 * @brief Join a network
 *
 * @param net_id Network ID
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_net_join(uint64_t net_id);
/**
 * @brief Leave a network
 *
 * @param net_id Network ID
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_net_leave(uint64_t net_id);
/**
 * @brief Return whether this network is ready to send and receive traffic.
 *
 * @return `1` if true, `0` if false.
 */
ZTS_API int ZTCALL zts_net_transport_is_ready(const uint64_t net_id);
/**
 * @brief Get the MAC Address for this node on the given network
 *
 * @param net_id Network ID
 *
 * @return MAC address in numerical format
 */
ZTS_API uint64_t ZTCALL zts_net_get_mac(uint64_t net_id);
/**
 * @brief Get the MAC Address for this node on the given network
 *
 * @param net_id Network ID
 * @param dst Destination string buffer
 * @param len Length of destination string buffer. Must be exactly `ZTS_MAC_ADDRSTRLEN`
 *
 * @return MAC address in string format
 */
ZTS_API int ZTCALL zts_net_get_mac_str(uint64_t net_id, char* dst, unsigned int len);
/**
 * @brief Return whether broadcast is enabled on this network
 *
 * @param net_id Network ID
 *
 * @return `1` if true, `0` if false.
 */
ZTS_API int ZTCALL zts_net_get_broadcast(uint64_t net_id);
/**
 * @brief Get the MTU of the given network
 *
 * @param net_id Network ID
 *
 * @return MTU
 */
ZTS_API int ZTCALL zts_net_get_mtu(uint64_t net_id);
/**
 * @brief Start the ZeroTier node. Should be called after calling the relevant
 *    `zts_init_*` functions for your application. To enable storage call
 *    `zts_init_from_storage()` before this function. To enable event callbacks
 *     call `zts_init_set_event_handler()` before this function.
 *
 * Note: If neither `zts_init_from_storage()` or `zts_init_from_memory()` are
 * called a new identity will be generated and will be retrievable via
 * `zts_node_get_id_pair()` *after* the node has started.
 *
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem.
 */
ZTS_API int ZTCALL zts_node_start();