pkg/crate/libzt/src/libzt.rs

extern "C" {
    #[doc = " @brief Enable or disable whether the node will cache peer details (enabled"]
    #[doc = " by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " This can potentially shorten (connection) times between node restarts. This allows the service to"]
    #[doc = " re-use previously discovered paths to a peer, this prevents the service from"]
    #[doc = " having to go through the entire transport-triggered link provisioning"]
    #[doc = " process. This is especially useful for situations where paths to peers do not"]
    #[doc = " change often. This is enabled by default and can be disabled for cases where"]
    #[doc = " one may not want peer details to be written to storage."]
    #[doc = ""]
    #[doc = " See also: `zts_init_allow_net_cache()`"]
    #[doc = ""]
    #[doc = " @param enabled Whether or not this feature is enabled"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_peer_cache(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Enable or disable whether the node will cache root definitions (enabled"]
    #[doc = " by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param enabled Whether or not this feature is enabled"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_roots_cache(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Enable or disable whether the node will cache identities (enabled"]
    #[doc = " by default when `zts_init_from_storage()` is used.) Must be called before `zts_node_start()`."]
    #[doc = ""]
    #[doc = " @param enabled Whether or not this feature is enabled"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_init_allow_id_cache(allowed: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Return whether an address of the given family has been assigned by the network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`"]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_addr_is_assigned(
        net_id: u64,
        family: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the first-assigned IP on the given network."]
    #[doc = ""]
    #[doc = " To get *all* assigned addresses on a given network, use `zts_addr_get_all()`."]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`"]
    #[doc = " @param addr Destination buffer to hold address"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_get(
        net_id: u64,
        family: ::std::os::raw::c_uint,
        addr: *mut zts_sockaddr_storage,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the first-assigned IP on the given network as a null-terminated human-readable string"]
    #[doc = ""]
    #[doc = " To get *all* assigned addresses on a given network, use `zts_addr_get_all()`."]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`"]
    #[doc = " @param dst Destination buffer"]
    #[doc = " @param len Length of destination buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_get_str(
        net_id: u64,
        family: ::std::os::raw::c_uint,
        dst: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get all IP addresses assigned to this node by the given network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param addr Destination buffer to hold address"]
    #[doc = " @param count Number of addresses returned"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_get_all(
        net_id: u64,
        addr: *mut zts_sockaddr_storage,
        count: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute a `6PLANE` IPv6 address for the given Network ID and Node ID"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param node_id Node ID"]
    #[doc = " @param addr Destination structure for address"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_compute_6plane(
        net_id: u64,
        node_id: u64,
        addr: *mut zts_sockaddr_storage,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param node_id Node ID"]
    #[doc = " @param addr Destination structure for address"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_compute_rfc4193(
        net_id: u64,
        node_id: u64,
        addr: *mut zts_sockaddr_storage,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID and copy its"]
    #[doc = " null-terminated human-readable string representation into destination buffer."]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param node_id Node ID"]
    #[doc = " @param dst Destination string buffer"]
    #[doc = " @param len Length of destination string buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_compute_rfc4193_str(
        net_id: u64,
        node_id: u64,
        dst: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute `6PLANE` IPv6 address for the given Network ID and Node ID and copy its"]
    #[doc = " null-terminated human-readable string representation into destination buffer."]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param node_id Node ID"]
    #[doc = " @param dst Destination string buffer"]
    #[doc = " @param len Length of destination string buffer (must be exactly `ZTS_IP_MAX_STR_LEN`)"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_addr_compute_6plane_str(
        net_id: u64,
        node_id: u64,
        dst: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Compute `RFC4193` IPv6 address for the given Network ID and Node ID"]
    #[doc = ""]
    #[doc = " Ad-hoc Network:"]
    #[doc = " ```"]
    #[doc = " ffSSSSEEEE000000"]
    #[doc = " | |   |   |"]
    #[doc = " | |   |   Reserved for future use, must be 0"]
    #[doc = " | |   End of port range (hex)"]
    #[doc = " | Start of port range (hex)"]
    #[doc = " Reserved ZeroTier address prefix indicating a controller-less network."]
    #[doc = " ```"]
    #[doc = " Ad-hoc networks are public (no access control) networks that have no network"]
    #[doc = " controller. Instead their configuration and other credentials are generated"]
    #[doc = " locally. Ad-hoc networks permit only IPv6 UDP and TCP unicast traffic"]
    #[doc = " (no multicast or broadcast) using 6plane format NDP-emulated IPv6 addresses."]
    #[doc = " In addition an ad-hoc network ID encodes an IP port range. UDP packets and"]
    #[doc = " TCP SYN (connection open) packets are only allowed to destination ports"]
    #[doc = " within the encoded range."]
    #[doc = ""]
    #[doc = " For example `ff00160016000000` is an ad-hoc network allowing only SSH,"]
    #[doc = " while `ff0000ffff000000` is an ad-hoc network allowing any UDP or TCP port."]
    #[doc = ""]
    #[doc = " Keep in mind that these networks are public and anyone in the entire world"]
    #[doc = " can join them. Care must be taken to avoid exposing vulnerable services or"]
    #[doc = " sharing unwanted files or other resources."]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @param start_port Start of port allowed port range"]
    #[doc = " @param end_port End of allowed port range"]
    #[doc = " @return An Ad-hoc network ID"]
    pub fn zts_net_compute_adhoc_id(start_port: u16, end_port: u16) -> u64;
}
extern "C" {
    #[doc = " @brief Join a network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_net_join(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Leave a network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_net_leave(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Return whether this network is ready to send and receive traffic."]
    #[doc = ""]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_net_transport_is_ready(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the MAC Address for this node on the given network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = ""]
    #[doc = " @return MAC address in numerical format"]
    pub fn zts_net_get_mac(net_id: u64) -> u64;
}
extern "C" {
    #[doc = " @brief Get the MAC Address for this node on the given network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param dst Destination string buffer"]
    #[doc = " @param len Length of destination string buffer. Must be exactly `ZTS_MAC_ADDRSTRLEN`"]
    #[doc = ""]
    #[doc = " @return MAC address in string format"]
    pub fn zts_net_get_mac_str(
        net_id: u64,
        dst: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Return whether broadcast is enabled on this network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = ""]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_net_get_broadcast(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the MTU of the given network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = ""]
    #[doc = " @return MTU"]
    pub fn zts_net_get_mtu(net_id: u64) -> ::std::os::raw::c_int;
}
